@@ -63,7 +63,7 @@ static int iActionQueueSize = 1000;				/* size of the main message queue above *
 static int iActionQHighWtrMark = 800;				/* high water mark for disk-assisted queues */
 static int iActionQLowWtrMark = 200;				/* low water mark for disk-assisted queues */
 static int iActionQDiscardMark = 9800;				/* begin to discard messages */
-static int iActionQDiscardSeverity = 4;				/* discard warning and above */
+static int iActionQDiscardSeverity = 8;				/* by default, discard nothing to prevent unintentional loss */
 static int iActionQueueNumWorkers = 1;				/* number of worker threads for the mm queue above */
 static uchar *pszActionQFName = NULL;				/* prefix for the main message queue file */
 static int64 iActionQueMaxFileSize = 1024*1024;
