@@ -335,7 +335,7 @@ static int iMainMsgQueueSize = 10000;				/* size of the main message queue above
 static int iMainMsgQHighWtrMark = 8000;				/* high water mark for disk-assisted queues */
 static int iMainMsgQLowWtrMark = 2000;				/* low water mark for disk-assisted queues */
 static int iMainMsgQDiscardMark = 9800;				/* begin to discard messages */
-static int iMainMsgQDiscardSeverity = 4;			/* discard warning and above */
+static int iMainMsgQDiscardSeverity = 8;			/* by default, discard nothing to prevent unintentional loss */
 static int iMainMsgQueueNumWorkers = 1;				/* number of worker threads for the mm queue above */
 static queueType_t MainMsgQueType = QUEUETYPE_FIXED_ARRAY;	/* type of the main message queue above */
 static uchar *pszMainMsgQFName = NULL;				/* prefix for the main message queue file */
